; ModuleID = '/home/carl/AnghaBench/disque/deps/linenoise/extr_linenoise.c_linenoiseEditMoveLeft.c'
source_filename = "/home/carl/AnghaBench/disque/deps/linenoise/extr_linenoise.c_linenoiseEditMoveLeft.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.linenoiseState = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @linenoiseEditMoveLeft(%struct.linenoiseState* %0) #0 {
  %2 = alloca %struct.linenoiseState*, align 8
  store %struct.linenoiseState* %0, %struct.linenoiseState** %2, align 8
  %3 = load %struct.linenoiseState*, %struct.linenoiseState** %2, align 8
  %4 = getelementptr inbounds %struct.linenoiseState, %struct.linenoiseState* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp sgt i64 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.linenoiseState*, %struct.linenoiseState** %2, align 8
  %9 = getelementptr inbounds %struct.linenoiseState, %struct.linenoiseState* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = add nsw i64 %10, -1
  store i64 %11, i64* %9, align 8
  %12 = load %struct.linenoiseState*, %struct.linenoiseState** %2, align 8
  %13 = call i32 @refreshLine(%struct.linenoiseState* %12)
  br label %14

14:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @refreshLine(%struct.linenoiseState*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
